canvas-map: fix off-draggable canvas on firefox

--- a/site/src/components/canvas-map/canvas-map.css
+++ b/site/src/components/canvas-map/canvas-map.css
@@ -17,6 +17,8 @@
   height: 100%;
   overflow: hidden;
   transition: filter 0.5s;
+  -webkit-user-drag: none;
+  user-select: none;
 }
 
 #canvas-map:not(.interactive) {
